examples/Go-(Golang)/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-service
spec:
  type: ClusterIP
  selector:
    app: go-app
  ports:
  - name: http
    port: 80
    targetPort: 8080
